# MunHub

./: .env.example  .firebaserc  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  AI_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIREBASE_DEPLOYMENT.md  GEMINI.md  Instructions_for_AI.txt  LICENSE  MUNRA_PROJECT_OVERVIEW.md  Prompts.txt  README.md  URLs.txt  database.rules.json  eslint.config.mjs  firebase.json  firebase_credentials.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.firebase/: hosting.cHVibGlj.cache
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/src/: lib.rs  main.rs
changelog.d/: README.md  adr-002-accepted.changed.md  aflek-autosync.added.md  aflek-integration.changed.md  agent-core-rate.fixed.md  agent-core.added.md  agent-entrypoints.changed.md  agent-event-science-auto-stop.fixed.md  agent-event-science.added.md  agent-event-upload.added.md  auth.added.md  blob-storage.added.md  contribution-standards.added.md  data-provider-interface.added.md  event-storage-contract.added.md  firebase-provider.added.md  fleet-command-charter.added.md  fleet-dispatch-hardening.added.md  fleet-implementation-plan.added.md  fleet-kit-adoption.changed.md  insights-v0-spec.added.md  physics-package.added.md  planning-translation-w1.changed.md  planning-translation-w2.changed.md  planning-translation-w3.changed.md  planning-translation-w4.changed.md  (+11 more)
(+208 files in other folders)
