[package]
name = "munhub-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "munhub_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.6.2"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serialport = "4.9.0"
tauri = "2.11.2"
